<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registo">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/etNome"
        android:layout_marginTop="10dp"
        android:hint="E-mail" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/etEmail"
        android:hint="@string/password"
        android:inputType="textPassword"/>


    <TextView
        android:id="@+id/txtregisto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPass"
        android:layout_marginTop="70dp"
        android:layout_alignStart="@id/etPass"
        android:text="@string/new_account"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnRegisto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/txtregisto"
        android:background="@drawable/seta"
        android:layout_below="@+id/etPass"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"/>


</RelativeLayout>